fixed page wrap issue

--- a/src/pages/error.css
+++ b/src/pages/error.css
@@ -1,3 +1,3 @@
-.about-wrapper {
+.page-not-found {
     display: flex;
 }
